src/layouts/FormLayout.css
/* font weights */
/* standard border curvature (radius) */
/* light mode */
/* color scheme */
/* functional colors */
/* dark mode - subject to change, not tested */
/* color scheme */
/* functional colors */
.form {
  background-color: #fffff0;
  border: #f5aa37 solid 2px;
  border-radius: 0.5rem;
  padding: 1rem;
  display: flex;
  position: relative;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: auto;
  width: -moz-min-content;
  width: min-content;
}
.form__container {
  display: flex;
  flex-direction: column;
  min-width: 300px;
  text-align: left;
  margin: 0 0.5rem 0 0.5rem;
}
.form__container-element {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  width: 100%;
  margin-bottom: 0.25rem;
}
.form__container-element__label {
  font-weight: 700;
  color: #273f68;
}
.form__container-element__input {
  padding: 0.25rem;
  border: #f5aa37 solid 2px;
  border-radius: 0.5rem;
  width: 100%;
}
.form__container__error-message, .form__container-element__validation-prompt {
  float: left;
  color: #dc143c;
  font-size: 0.7rem;
  margin-top: 0.25rem;
  font-style: italic;
  margin: 0.25rem;
}
.form-redirect {
  width: 100%;
  justify-content: space-around;
  align-items: center;
  margin-top: 0.5rem;
}
.form-redirect a {
  font-size: 1.1rem;
  font-weight: 700;
  text-decoration: underline;
}
.form-redirect a::after {
  content: "!";
}

.divider {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  margin: 0.5rem 0 0.25rem 0;
}

.form__container__submit-button {
  padding: 0.25rem 0.5rem;
  margin-top: 1rem;
  color: #2b2217;
  font-weight: 700;
  border: #f5aa37 solid 2px;
  border-radius: 0.5rem;
  cursor: pointer;
  width: -moz-fit-content;
  width: fit-content;
  align-self: center;
  transition: all 0.3s;
}

.google-button {
  padding: 0.25rem 0.5rem;
  margin-top: 0.5rem;
  color: #2b2217;
  font-weight: 700;
  border: #f5aa37 solid 2px;
  border-radius: 0.5rem;
  cursor: pointer;
  width: -moz-fit-content;
  width: fit-content;
  align-self: center;
  transition: all 0.3s;
}

.form__container__submit-button:hover,
.google-button:hover {
  background-color: #a4c7e0;
  border: transparent solid 2px;
}/*# sourceMappingURL=FormLayout.css.map */

